backend/incidents/list/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agentic-incident-list
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  selector:
    app: agentic-incident-list
  ports:
    - port: 80
      targetPort: 8000
