backend/incidents/list/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: incident-list-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: incident-list.devopsinsiders.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: agentic-incident-list
            port: 
              number: 80
